Added basic skeleton

--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamic UI</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 <script src="scripts.js"></script>
 <body>
-    
+    <div class="navbar">
+        <div class="dropdown">
+            <button class="dropbtn">Dropdown
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+
+            </div>
+        </div>
+    </div>
+    <div class="gallery">
+        <h1>Image Carousel</h1>
+        <div class="gallery-container">
+
+        </div>
+    </div>
 </body>
 </html>
