Added images for carousel

--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
     <div class="gallery">
         <h1>Image Carousel</h1>
         <div class="gallery-container">
-
+            <img class="gallery-item gallery-item-1" src="images/IMG_1.jpeg" data-index="1" />
+            <img class="gallery-item gallery-item-2" src="images/IMG_2.jpeg" data-index="2" />
+            <img class="gallery-item gallery-item-3" src="images/IMG_3.jpeg" data-index="3" />
+            <img class="gallery-item gallery-item-4" src="images/IMG_4.jpeg" data-index="4" />
+            <img class="gallery-item gallery-item-5" src="images/IMG_5.jpeg" data-index="5" />
         </div>
+        <div class="gallery-controls"></div>
     </div>
 </body>
 </html>
