Added dot navigation

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
             <img class="gallery-item gallery-item-4" src="images/IMG_4.jpeg" data-index="4" />
             <img class="gallery-item gallery-item-5" src="images/IMG_5.jpeg" data-index="5" />
         </div>
+        <ul class="gallery-nav">
+            <li data-index="1" class="gallery-nav-dot"></li>
+            <li data-index="2" class="gallery-nav-dot"></li>
+            <li data-index="3" class="gallery-nav-dot"></li>
+            <li data-index="4" class="gallery-nav-dot"></li>
+            <li data-index="5" class="gallery-nav-dot"></li>
+        </ul>
         <div class="gallery-controls"></div>
     </div>
     <script src="scripts.js"></script>
